# weialbert.github.io

./: .gitignore  Makefile  README.md  githistory.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy.yml  release.yml
archive/: Makefile  README.md  makefile  pyproject.toml  resume.md
archive/data/: data.yaml
archive/src/: render.py
archive/templates/: index.html.j2
archive/workflows/: build.yml  deploy.yml
data/: data.yaml  experience.yaml
scripts/: check_outputs.sh  render.py
src/: render.py
src/layouts/: BaseLayout.astro
src/pages/: index.astro
static/css/: style.css
templates/: index.html.j2  index.html.tmpl  resume.html.j2  resume.html.tmpl  resume.md.tmpl  resume.typ.j2  resume.typ.tmpl
